<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sort"
        android:title="@string/search_title"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        >
        <menu>
            <item android:id="@+id/name"
                android:title="@string/name"/>
            <item android:id="@+id/mobile"
                android:title="@string/mobile"/>
            <item android:id="@+id/RegId"
                android:title="@string/RegId"/>
        </menu>
    </item>
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />


</menu>