<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:fab="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pnf.penequillaunch.mainActivity.PatientFragment">


    <Button
        android:id="@+id/next_bundle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="next bundle"
        android:visibility="gone" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="4dp">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/coloumn1"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/phone"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/phone"/>

            <TextView
                android:id="@+id/gender"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/gender"
                android:textStyle="bold"
                android:layout_below="@+id/phone"/>

            <TextView
                android:id="@+id/age"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/age"
                android:textStyle="bold"
                android:layout_below="@+id/gender"/>

            <TextView
                android:id="@+id/visits"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/visits"
                android:textStyle="bold"
                android:layout_below="@+id/age"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/a"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimary"
                android:text="-"/>
            <TextView
                android:id="@+id/b"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="@color/colorPrimary"
                android:text="-"
                android:layout_below="@+id/a"/>
            <TextView
                android:id="@+id/c"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="@color/colorPrimary"
                android:text="-"
                android:layout_below="@+id/b"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="0.7">
            <TextView
                android:id="@+id/phone_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/patient_id"/>

            <TextView
                android:id="@+id/gender_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/gender"
                android:textStyle="bold"
                android:layout_below="@+id/phone_txt"/>
            <TextView
                android:id="@+id/age_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/age"
                android:textStyle="bold"
                android:layout_below="@+id/gender_txt"/>
            <TextView
                android:id="@+id/visits_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/age"
                android:textStyle="bold"
                android:layout_below="@+id/age_txt"/>
        </RelativeLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="5dp" />



</LinearLayout>
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_blue_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/recycler"
        app:layout_anchorGravity="bottom|end"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        fab:menu_fab_size="normal"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryDark"
        fab:menu_colorRipple="@color/colorPrimary">



        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_document_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_colorRipple="@color/colorPrimary"
            android:src="@drawable/fab_add"
            fab:fab_label="add document"
            style="@style/MenuButtonsSmall" />

    </com.github.clans.fab.FloatingActionMenu>
</FrameLayout>