<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">
<TextView
    android:textStyle="bold"
    android:fontFamily="sans-serif-smallcaps"
    android:gravity="center"
    android:textSize="20sp"
    android:text="@string/pen_status"
    android:textColor="#fff"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize" />
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/pen_not_found"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3333" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/pen_not_found"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3333" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFF"
        android:padding="15dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:padding="1dp">

            <ProgressBar
                android:id="@+id/battery_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="70"
                android:progressDrawable="@drawable/progress_pen_battery" />
        </FrameLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3333" />

    <LinearLayout
        android:id="@+id/battery_layout_pen"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Pen Battery"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/battery_pen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Battery"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22dp" />
    </LinearLayout>

    <TextView
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/device_status"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/device_not_found"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3333" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/pen_not_found"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3333" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFF"
        android:padding="15dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:padding="1dp">

            <ProgressBar
                android:id="@+id/battery_progress_device"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="70"
                android:progressDrawable="@drawable/progress_pen_battery" />
        </FrameLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3333" />

    <LinearLayout
        android:id="@+id/battery_layout_device"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Device Battery"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/battery_device"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Battery"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3333" />
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/disconnect_pen"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/disconnection"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>